crates/synth-ir/tests/snapshots/lowering__every_ir_fixture_lowers_clean_and_stable@single_mcu.snap
---
source: crates/synth-ir/tests/lowering.rs
expression: board
---
{
  "name": "single_mcu",
  "layers": 2,
  "manufacturer": "jlcpcb",
  "components": [
    {
      "id": 0,
      "refdes": "U1",
      "kind": "mcu",
      "part": {
        "id": "rp2350",
        "kind": "mcu",
        "description": "Raspberry Pi RP2350 dual-core MCU, QFN-60",
        "version": 0,
        "lifecycle": "active",
        "signed_by": [],
        "substitutes": [],
        "mpn": "RP2350A",
        "lcsc_pn": "C14663",
        "pins": [
          {
            "name": "iovdd",
            "number": "1",
            "electrical_type": "power_input",
            "capabilities": [],
            "required": true,
            "unit": null,
            "voltage_max_v": null
          },
          {
            "name": "dvdd3",
            "number": "23",
            "electrical_type": "power_input",
            "capabilities": [],
            "required": true,
            "unit": null,
            "voltage_max_v": null
          },
          {
            "name": "gnd",
            "number": "61",
            "electrical_type": "power_input",
            "capabilities": [],
            "required": true,
            "unit": null,
            "voltage_max_v": null
          },
          {
            "name": "usb_dp",
            "number": "52",
            "electrical_type": "differential_positive",
            "capabilities": [
              "usb_dp"
            ],
            "required": false,
            "unit": null,
            "voltage_max_v": null
          },
          {
            "name": "usb_dn",
            "number": "51",
            "electrical_type": "differential_negative",
            "capabilities": [
              "usb_dn"
            ],
            "required": false,
            "unit": null,
            "voltage_max_v": null
          },
          {
            "name": "gp0",
            "number": "2",
            "electrical_type": "bidirectional",
            "capabilities": [
              "gpio",
              "spi_mosi",
              "uart_tx",
              "i2c_sda"
            ],
            "required": false,
            "unit": null,
            "voltage_max_v": null
          },
          {
            "name": "gp1",
            "number": "3",
            "electrical_type": "bidirectional",
            "capabilities": [
              "gpio",
              "spi_cs",
              "uart_rx",
              "i2c_scl"
            ],
            "required": false,
            "unit": null,
            "voltage_max_v": null
          },
          {
            "name": "gp2",
            "number": "4",
            "electrical_type": "bidirectional",
            "capabilities": [
              "gpio",
              "spi_sck",
              "uart_tx"
            ],
            "required": false,
            "unit": null,
            "voltage_max_v": null
          },
          {
            "name": "gp3",
            "number": "5",
            "electrical_type": "bidirectional",
            "capabilities": [
              "gpio",
              "spi_miso",
              "uart_rx"
            ],
            "required": false,
            "unit": null,
            "voltage_max_v": null
          },
          {
            "name": "gp4",
            "number": "7",
            "electrical_type": "bidirectional",
            "capabilities": [
              "gpio"
            ],
            "required": false,
            "unit": null,
            "voltage_max_v": null
          },
          {
            "name": "gp5",
            "number": "8",
            "electrical_type": "bidirectional",
            "capabilities": [
              "gpio"
            ],
            "required": false,
            "unit": null,
            "voltage_max_v": null
          },
          {
            "name": "gp6",
            "number": "9",
            "electrical_type": "bidirectional",
            "capabilities": [
              "gpio"
            ],
            "required": false,
            "unit": null,
            "voltage_max_v": null
          },
          {
            "name": "gp7",
            "number": "10",
            "electrical_type": "bidirectional",
            "capabilities": [
              "gpio"
            ],
            "required": false,
            "unit": null,
            "voltage_max_v": null
          },
          {
            "name": "gp8",
            "number": "12",
            "electrical_type": "bidirectional",
            "capabilities": [
              "gpio"
            ],
            "required": false,
            "unit": null,
            "voltage_max_v": null
          },
          {
            "name": "gp9",
            "number": "13",
            "electrical_type": "bidirectional",
            "capabilities": [
              "gpio"
            ],
            "required": false,
            "unit": null,
            "voltage_max_v": null
          },
          {
            "name": "gp10",
            "number": "14",
            "electrical_type": "bidirectional",
            "capabilities": [
              "gpio"
            ],
            "required": false,
            "unit": null,
            "voltage_max_v": null
          },
          {
            "name": "gp11",
            "number": "15",
            "electrical_type": "bidirectional",
            "capabilities": [
              "gpio"
            ],
            "required": false,
            "unit": null,
            "voltage_max_v": null
          },
          {
            "name": "gp12",
            "number": "16",
            "electrical_type": "bidirectional",
            "capabilities": [
              "gpio"
            ],
            "required": false,
            "unit": null,
            "voltage_max_v": null
          },
          {
            "name": "gp13",
            "number": "17",
            "electrical_type": "bidirectional",
            "capabilities": [
              "gpio"
            ],
            "required": false,
            "unit": null,
            "voltage_max_v": null
          },
          {
            "name": "gp14",
            "number": "18",
            "electrical_type": "bidirectional",
            "capabilities": [
              "gpio"
            ],
            "required": false,
            "unit": null,
            "voltage_max_v": null
          },
          {
            "name": "gp15",
            "number": "19",
            "electrical_type": "bidirectional",
            "capabilities": [
              "gpio"
            ],
            "required": false,
            "unit": null,
            "voltage_max_v": null
          },
          {
            "name": "gp16",
            "number": "27",
            "electrical_type": "bidirectional",
            "capabilities": [
              "gpio"
            ],
            "required": false,
            "unit": null,
            "voltage_max_v": null
          },
          {
            "name": "gp17",
            "number": "28",
            "electrical_type": "bidirectional",
            "capabilities": [
              "gpio"
            ],
            "required": false,
            "unit": null,
            "voltage_max_v": null
          },
          {
            "name": "gp18",
            "number": "29",
            "electrical_type": "bidirectional",
            "capabilities": [
              "gpio"
            ],
            "required": false,
            "unit": null,
            "voltage_max_v": null
          },
          {
            "name": "gp19",
            "number": "31",
            "electrical_type": "bidirectional",
            "capabilities": [
              "gpio"
            ],
            "required": false,
            "unit": null,
            "voltage_max_v": null
          },
          {
            "name": "gp20",
            "number": "32",
            "electrical_type": "bidirectional",
            "capabilities": [
              "gpio"
            ],
            "required": false,
            "unit": null,
            "voltage_max_v": null
          },
          {
            "name": "gp21",
            "number": "33",
            "electrical_type": "bidirectional",
            "capabilities": [
              "gpio"
            ],
            "required": false,
            "unit": null,
            "voltage_max_v": null
          },
          {
            "name": "gp22",
            "number": "34",
            "electrical_type": "bidirectional",
            "capabilities": [
              "gpio"
            ],
            "required": false,
            "unit": null,
            "voltage_max_v": null
          },
          {
            "name": "gp23",
            "number": "35",
            "electrical_type": "bidirectional",
            "capabilities": [
              "gpio"
            ],
            "required": false,
            "unit": null,
            "voltage_max_v": null
          },
          {
            "name": "gp24",
            "number": "36",
            "electrical_type": "bidirectional",
            "capabilities": [
              "gpio"
            ],
            "required": false,
            "unit": null,
            "voltage_max_v": null
          },
          {
            "name": "gp25",
            "number": "37",
            "electrical_type": "bidirectional",
            "capabilities": [
              "gpio"
            ],
            "required": false,
            "unit": null,
            "voltage_max_v": null
          },
          {
            "name": "gp26",
            "number": "40",
            "electrical_type": "bidirectional",
            "capabilities": [
              "gpio"
            ],
            "required": false,
            "unit": null,
            "voltage_max_v": null
          },
          {
            "name": "gp27",
            "number": "41",
            "electrical_type": "bidirectional",
            "capabilities": [
              "gpio"
            ],
            "required": false,
            "unit": null,
            "voltage_max_v": null
          },
          {
            "name": "gp28",
            "number": "42",
            "electrical_type": "bidirectional",
            "capabilities": [
              "gpio"
            ],
            "required": false,
            "unit": null,
            "voltage_max_v": null
          },
          {
            "name": "gp29",
            "number": "43",
            "electrical_type": "bidirectional",
            "capabilities": [
              "gpio"
            ],
            "required": false,
            "unit": null,
            "voltage_max_v": null
          },
          {
            "name": "run",
            "number": "26",
            "electrical_type": "input",
            "capabilities": [
              "reset"
            ],
            "required": true,
            "unit": null,
            "voltage_max_v": null
          },
          {
            "name": "xin",
            "number": "21",
            "electrical_type": "clock",
            "capabilities": [
              "clock_input"
            ],
            "required": false,
            "unit": null,
            "voltage_max_v": null
          },
          {
            "name": "xout",
            "number": "22",
            "electrical_type": "clock",
            "capabilities": [
              "clock_output"
            ],
            "required": false,
            "unit": null,
            "voltage_max_v": null
          },
          {
            "name": "swclk",
            "number": "24",
            "electrical_type": "input",
            "capabilities": [],
            "required": false,
            "unit": null,
            "voltage_max_v": null
          },
          {
            "name": "swdio",
            "number": "25",
            "electrical_type": "bidirectional",
            "capabilities": [],
            "required": false,
            "unit": null,
            "voltage_max_v": null
          },
          {
            "name": "iovdd2",
            "number": "11",
            "electrical_type": "power_input",
            "capabilities": [],
            "required": false,
            "unit": null,
            "voltage_max_v": null
          },
          {
            "name": "iovdd3",
            "number": "20",
            "electrical_type": "power_input",
            "capabilities": [],
            "required": false,
            "unit": null,
            "voltage_max_v": null
          },
          {
            "name": "iovdd4",
            "number": "30",
            "electrical_type": "power_input",
            "capabilities": [],
            "required": false,
            "unit": null,
            "voltage_max_v": null
          },
          {
            "name": "iovdd5",
            "number": "38",
            "electrical_type": "power_input",
            "capabilities": [],
            "required": false,
            "unit": null,
            "voltage_max_v": null
          },
          {
            "name": "iovdd6",
            "number": "45",
            "electrical_type": "power_input",
            "capabilities": [],
            "required": false,
            "unit": null,
            "voltage_max_v": null
          },
          {
            "name": "dvdd",
            "number": "6",
            "electrical_type": "power_input",
            "capabilities": [],
            "required": false,
            "unit": null,
            "voltage_max_v": null
          },
          {
            "name": "dvdd2",
            "number": "39",
            "electrical_type": "power_input",
            "capabilities": [],
            "required": false,
            "unit": null,
            "voltage_max_v": null
          },
          {
            "name": "qspi_iovdd",
            "number": "54",
            "electrical_type": "power_input",
            "capabilities": [],
            "required": false,
            "unit": null,
            "voltage_max_v": null
          },
          {
            "name": "usb_otp_vdd",
            "number": "53",
            "electrical_type": "power_input",
            "capabilities": [],
            "required": false,
            "unit": null,
            "voltage_max_v": null
          },
          {
            "name": "vreg_avdd",
            "number": "46",
            "electrical_type": "power_input",
            "capabilities": [],
            "required": false,
            "unit": null,
            "voltage_max_v": null
          },
          {
            "name": "vreg_pgnd",
            "number": "47",
            "electrical_type": "power_input",
            "capabilities": [],
            "required": false,
            "unit": null,
            "voltage_max_v": null
          },
          {
            "name": "vreg_lx",
            "number": "48",
            "electrical_type": "power_output",
            "capabilities": [],
            "required": false,
            "unit": null,
            "voltage_max_v": null
          },
          {
            "name": "vreg_vin",
            "number": "49",
            "electrical_type": "power_input",
            "capabilities": [],
            "required": false,
            "unit": null,
            "voltage_max_v": null
          },
          {
            "name": "vreg_fb",
            "number": "50",
            "electrical_type": "input",
            "capabilities": [],
            "required": false,
            "unit": null,
            "voltage_max_v": null
          },
          {
            "name": "adc_avdd",
            "number": "44",
            "electrical_type": "power_input",
            "capabilities": [],
            "required": false,
            "unit": null,
            "voltage_max_v": null
          },
          {
            "name": "qspi_sclk",
            "number": "56",
            "electrical_type": "output",
            "capabilities": [
              "spi_sck"
            ],
            "required": false,
            "unit": null,
            "voltage_max_v": null
          },
          {
            "name": "qspi_sd0",
            "number": "57",
            "electrical_type": "bidirectional",
            "capabilities": [
              "spi_mosi",
              "spi_miso"
            ],
            "required": false,
            "unit": null,
            "voltage_max_v": null
          },
          {
            "name": "qspi_sd1",
            "number": "59",
            "electrical_type": "bidirectional",
            "capabilities": [
              "spi_mosi",
              "spi_miso"
            ],
            "required": false,
            "unit": null,
            "voltage_max_v": null
          },
          {
            "name": "qspi_sd2",
            "number": "58",
            "electrical_type": "bidirectional",
            "capabilities": [
              "spi_mosi",
              "spi_miso"
            ],
            "required": false,
            "unit": null,
            "voltage_max_v": null
          },
          {
            "name": "qspi_sd3",
            "number": "55",
            "electrical_type": "bidirectional",
            "capabilities": [
              "spi_mosi",
              "spi_miso"
            ],
            "required": false,
            "unit": null,
            "voltage_max_v": null
          },
          {
            "name": "qspi_ss",
            "number": "60",
            "electrical_type": "output",
            "capabilities": [
              "spi_cs"
            ],
            "required": false,
            "unit": null,
            "voltage_max_v": null
          }
        ],
        "required_decoupling": [
          {
            "net": "iovdd",
            "value": "100nf",
            "count": 4,
            "max_distance_mm": null
          },
          {
            "net": "dvdd",
            "value": "100nf",
            "count": 2,
            "max_distance_mm": null
          }
        ],
        "kicad_symbol": "MCU_RaspberryPi:RP2350A",
        "kicad_footprint": "Package_DFN_QFN:QFN-60-1EP_7x7mm_P0.4mm_EP3.4x3.4mm",
        "footprint_dimensions": {
          "width_mm": 7.75,
          "height_mm": 7.75,
          "courtyard_margin_mm": 0.25,
          "mating_face": null
        },
        "operating_conditions": {
          "min_voltage_v": 1.8,
          "max_voltage_v": 3.6,
          "max_current_ma": 150.0
        }
      },
      "source_span": {
        "byte_start": 58,
        "byte_end": 84
      }
    }
  ],
  "nets": [],
  "diff_pairs": [],
  "keepouts": [],
  "netclasses": [],
  "source_span": {
    "byte_start": 0,
    "byte_end": 86
  }
}
